mobile and right menu item wrap fix

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -827,16 +827,17 @@ aside {
 .right-content-items-heading {
   font-size: 22px;
   margin-bottom: 10px;
-  margin: 25px 0px 10px;
+  margin: 30px 0px 0px;
 }
 .right-content-items-column {
   display: flex;
+  flex-wrap: wrap;
 }
 .right-column-menu-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 16px;
+  padding: 16px 5px;
   text-align: center;
   align-items: center;
   border: 1px solid #acadae;
@@ -844,9 +845,10 @@ aside {
   -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
   -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
-  flex-basis: 16%;
-  margin-right: 20px;
+  flex-basis: 155px;
+  margin-right: 15px;
   cursor: pointer;
+  margin-top: 20px;
 }
 .right-column-menu-item svg {
   margin-bottom: 10px;
